--- a/notebooks/run_elastic_net.ipynb
+++ b/notebooks/run_elastic_net.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "37dfbf15",
    "metadata": {},
    "outputs": [
@@ -28,15 +28,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/content/LTSF_Linear/elastic_net/v1/main.py\", line 210, in <module>\n",
-      "    main()\n",
-      "  File \"/content/LTSF_Linear/elastic_net/v1/main.py\", line 29, in main\n",
-      "    data_path = find_data_path(\"FPT_train.csv\")\n",
-      "                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/content/LTSF_Linear/elastic_net/v1/data_utils.py\", line 31, in find_data_path\n",
-      "    raise FileNotFoundError(f\"Cannot find {filename} in known locations\")\n",
-      "FileNotFoundError: Cannot find FPT_train.csv in known locations\n"
+      "Raw data: (1149, 7) 2020-08-03 00:00:00 -> 2025-03-10 00:00:00\n",
+      "Number of samples used to fit scaler: 587\n",
+      "\n",
+      "Grid search 1 - chọn window_size, window_type, alpha, l1_ratio cơ bản:\n",
+      "Best config (coarse search): {'window_size': 126, 'window_type': 'expanding', 'alpha': 0.005, 'l1_ratio': 0.5}\n",
+      "   window_size window_type  alpha  l1_ratio  n_val      mse       mae\n",
+      "0          126   expanding  0.005       0.5    541  0.00019  0.009989\n",
+      "1          126   expanding  0.005       0.8    541  0.00019  0.009989\n",
+      "2          126   expanding  0.010       0.5    541  0.00019  0.009989\n",
+      "3          126   expanding  0.010       0.8    541  0.00019  0.009989\n",
+      "4          252   expanding  0.005       0.5    541  0.00019  0.009989\n",
+      "5          252   expanding  0.005       0.8    541  0.00019  0.009989\n",
+      "6          252   expanding  0.010       0.5    541  0.00019  0.009989\n",
+      "7          252   expanding  0.010       0.8    541  0.00019  0.009989\n",
+      "8          504   expanding  0.005       0.5    541  0.00019  0.009989\n",
+      "9          504   expanding  0.005       0.8    541  0.00019  0.009989\n",
+      "\n",
+      "Grid search 2 - tinh chỉnh alpha và l1_ratio:\n",
+      "Best config (fine search): {'window_size': 126, 'window_type': 'expanding', 'alpha': 0.005, 'l1_ratio': 0.5}\n",
+      "   window_size window_type   alpha  l1_ratio  n_val       mse       mae\n",
+      "0          126   expanding  0.0050       0.5    541  0.000190  0.009989\n",
+      "1          126   expanding  0.0050       0.8    541  0.000190  0.009989\n",
+      "2          126   expanding  0.0100       0.5    541  0.000190  0.009989\n",
+      "3          126   expanding  0.0100       0.8    541  0.000190  0.009989\n",
+      "4          126   expanding  0.0200       0.2    541  0.000190  0.009989\n",
+      "5          126   expanding  0.0200       0.5    541  0.000190  0.009989\n",
+      "6          126   expanding  0.0200       0.8    541  0.000190  0.009989\n",
+      "7          126   expanding  0.0100       0.2    541  0.000190  0.009990\n",
+      "8          126   expanding  0.0025       0.8    541  0.000190  0.009990\n",
+      "9          126   expanding  0.0025       0.5    541  0.000191  0.010005\n",
+      "\n",
+      "Kết quả 1-step-ahead return trên tập validation:\n",
+      "MSE: 0.00019017, MAE: 0.00998876, n_val_used: 541\n",
+      "\n",
+      "Calibrating return predictions trên validation:\n",
+      "Calibration coefficients: a=9.922159e-03, b=-5.611668\n",
+      "After calibration MSE: 0.00018936, MAE: 0.01003372\n",
+      "\n",
+      "Validation 1 step PRICE MSE:\n",
+      "  Naive:  1.655904\n",
+      "  Model:  1.635648\n",
+      "\n",
+      "Best ensemble weight trên price validation:\n",
+      "  w_naive = 0.00, w_model = 1.00, MSE = 1.635648\n",
+      "\n",
+      "Fit ElasticNet cuối cùng trên toàn bộ dữ liệu:\n",
+      "Forecasting future returns...\n",
+      "\n",
+      "Preview 100 ngày tương lai (price_final):\n",
+      "   step   ret_raw  ret_cal  price_model  price_naive  price_final\n",
+      "0     1  0.001501   0.0015   120.290251       120.11   120.290251\n",
+      "1     2  0.001501   0.0015   120.470772       120.11   120.470772\n",
+      "2     3  0.001501   0.0015   120.651565       120.11   120.651565\n",
+      "3     4  0.001501   0.0015   120.832628       120.11   120.832628\n",
+      "4     5  0.001501   0.0015   121.013963       120.11   121.013963\n",
+      "5     6  0.001501   0.0015   121.195571       120.11   121.195571\n",
+      "6     7  0.001501   0.0015   121.377451       120.11   121.377451\n",
+      "7     8  0.001501   0.0015   121.559604       120.11   121.559604\n",
+      "8     9  0.001501   0.0015   121.742030       120.11   121.742030\n",
+      "9    10  0.001501   0.0015   121.924730       120.11   121.924730\n",
+      "\n",
+      "Saved submission file to: submission.csv\n",
+      "   id       close\n",
+      "0   1  120.290251\n",
+      "1   2  120.470772\n",
+      "2   3  120.651565\n",
+      "3   4  120.832628\n",
+      "4   5  121.013963\n"
      ]
     }
    ],
